# glacier

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_V2.md  CLAUDE.md  CODEBASE_EXPLORATION_INDEX.md  CODE_STRUCTURE_REFERENCE.md  CONTRIBUTING.md  DESIGN.md  DESIGN_PIPELINE_COMPOSITION.md  DESIGN_UX.md  DESIGN_UX_CORRECT.md  DESIGN_V3.md  ENVIRONMENTS.md  ESCAPE_HATCH.md  LICENSE  MULTICLOUD.md  NEW_DESIGN.md  PROVIDER_ABSTRACTION_ANALYSIS.md  PROVIDER_STRATEGY_SUMMARY.md  PULUMI_ESCAPE_HATCH.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TYPE_CHECKER_SOLUTION.md  TYPE_CHECKER_SOLUTIONS.md  TYPE_HINT_EVALUATION.md  explore_type_solutions.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_advanced_type_hints.py  test_annotated_pattern.py  test_new_annotated_design.py  test_type_alias_approach.py  test_type_checking.py  test_type_hints.py
examples/: NEW_EXAMPLES_README.md  README.md  README_DEPLOYMENT.md  cloud_agnostic_advanced.py  cloud_agnostic_pipeline.py  compile_and_deploy.py  complete_pipeline_example.py  complex_dag.py  deploy_multicloud_pulumi.py  deploy_pipeline.py  deploy_stack_pulumi.py  deploy_with_pulumi.py  environment_first_pattern.py  escape_hatch_patterns.py  generate_sample_data.py  heterogeneous_pipeline.py  multi_cloud_pipeline.py  multi_environment_example.py  multi_source_join_example.py  multicloud_example.py  new_api_decorator.py  new_api_fluent.py  new_pattern_example.py  pipelines.py  practical_demo.py  production_pipeline.py  progressive_disclosure.py  provider_switching.py  pulumi_escape_hatch_example.py  s3_pipeline.py  simple_example.py  simple_pipeline.py  simple_pipeline_example.py  three_layers.py
glacier/: __init__.py  defaults.py  escape_hatch.py  mypy_plugin.py  pulumi_escape.py
glacier/adapters/: __init__.py  bucket.py  serverless.py
glacier/cli/: __init__.py  deploy.py  main.py
glacier/codegen/: __init__.py  analyzer.py  terraform.py
glacier/compilation/: __init__.py  compiler.py  multicloud.py  pulumi_compiler.py  stack_compiler.py
glacier/compute/: __init__.py  resources.py
glacier/config/: __init__.py  bucket.py  provider.py  serverless.py
glacier/core/: __init__.py  context.py  dag.py  dataset.py  env.py  environment.py  pipeline.py  stack.py  task.py
glacier/execution/: __init__.py  executor.py
glacier/monitoring/: __init__.py  resources.py
glacier/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py  local.py  provider.py
glacier/resources/: __init__.py  bucket.py  execution.py  serverless.py
glacier/runtime/: __init__.py  local.py
glacier/scheduling/: __init__.py  resources.py
glacier/secrets/: __init__.py  resources.py
glacier/sources/: __init__.py  azure.py  base.py  bucket.py  gcs.py  local.py  s3.py
glacier/storage/: __init__.py  resources.py
providers/glacier-aws/: README.md  pyproject.toml
providers/glacier-aws/glacier_aws/: __init__.py  compiler.py  compute.py  environment.py  executor.py  provider.py  storage.py
providers/glacier-aws/glacier_aws/resources/: compute.py  storage.py
providers/glacier-gcp/: pyproject.toml
providers/glacier-local/: README.md  pyproject.toml
providers/glacier-local/glacier_local/: __init__.py  executor.py  provider.py
tests/: __init__.py  test_cloud_agnostic.py  test_dag.py  test_decorators.py  test_sources.py
