[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glacier-gcp"
version = "0.1.0"
description = "GCP provider for Glacier data pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Glacier Team" }
]
dependencies = [
    "glacier-pipeline",
    "pulumi>=3.0.0",
    "pulumi-gcp>=7.0.0",
    "google-cloud-storage>=2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["glacier_gcp"]
