[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glacier-local"
version = "0.1.0"
description = "Local executor for Glacier data pipelines"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Glacier Team" }
]
dependencies = [
    "glacier-pipeline",
]

[tool.uv.sources]
glacier-pipeline = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["glacier_local"]
